--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ djangorestframework==3.12.2
 django-test-without-migrations==0.6
 Faker==8.1.2
 django-environ
+django-rest-framework-multi-slug-field
