--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -12,6 +12,10 @@ server {
         proxy_redirect off;
     }
 
+    location /.well-known/pki-validation/ {
+        alias /static/validators/
+    }
+
     location /static/ {
     	alias /static/;
     }
