--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
     }
 
     location /.well-known/pki-validation/ {
-        alias /static/validators/
+        alias /static/validators/;
     }
 
     location /static/ {
