configuration for https

--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -4,16 +4,20 @@ upstream app {
 
 server {
     listen 80 default_server;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+
+    ssl_certificate /certificates/certificate.crt;
+    ssl_certificate_key /certificates/private.key;
 
     location / {
         proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-    }
-
-    location /.well-known/pki-validation/ {
-        alias /static/validators/;
     }
 
     location /static/ {
